# generated 2000/7/30 17:50:54 CEST by nlingfx@geri.
# using glademm V0.5.9
#
# newer (non customized) versions of this file go to configure.in_glade

AC_INIT(src/blend_at.cc)
AM_INIT_AUTOMAKE(blend_at, 0.0)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

AM_PATH_GTKMM(1.2.1,,
        AC_MSG_ERROR(Cannot find GTK--: Please install Version 1.2.1+))

AC_OUTPUT(Makefile src/Makefile )
