# generated 2000/7/30 18:20:42 CEST by nlingfx@geri.
# using glademm V0.5.9
#
# newer (non customized) versions of this file go to Makefile.am_glade
bin_PROGRAMS = blend_at

blend_at_SOURCES = \
	blend_at.cc\
	win_main_glade.cc \
	win_main.cc \
	dlg_preferences_glade.cc \
	dlg_preferences.cc \
	glademm_support.cc \
	nl_blender_config.cc \
	nl_blender_xcontroller.cc

noinst_HEADERS = \
	win_main_glade.hh \
	win_main.hh \
	dlg_preferences_glade.hh \
	dlg_preferences.hh 

CXXFLAGS = @GTKMM_CFLAGS@

blend_at_LDADD = @GTKMM_LIBS@
